--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "author": "Web+DB Press",
-  "name": "socket-io-sample",
+  "name": "chat",
   "version": "0.0.0",
+  "main": "server.js",
   "dependencies": {
-    "socket.io": "0.9",
-    "express": "3.0"
-  }
+    "express": "3.x",
+    "socket.io": "0.9.x"
+  },
+  "license": "MIT"
 }
